force-app/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <description>Whenever an error is thrown anywhere in the system, a record will be added with vital information to debug the error.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>