force-app/main/default/objects/Error_Log__c/fields/Affected_Area__c.field-meta.xml
<CustomField>
    <fullName>Affected_Area__c</fullName>
    <description>The area of code affected by the exception.</description>
    <label>Affected Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>