force-app/main/default/objects/Error_Log__c/fields/Affected_Fields__c.field-meta.xml
<CustomField>
    <fullName>Affected_Fields__c</fullName>
    <description>Fields affected in a SaveResult error.</description>
    <label>Affected Fields</label>
    <type>TextArea</type>
</CustomField>