force-app/main/default/objects/Error_Log__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The location within the code where the error occured.</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>