force-app/main/default/objects/Error_Log__c/fields/Record_IDs__c.field-meta.xml
<CustomField>
    <fullName>Record_IDs__c</fullName>
    <description>ID list of all records affected by that particular error.</description>
    <label>Record IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>