force-app/main/default/objects/Error_Log__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>Status Code(s) associated with a SaveResult error.</description>
    <label>Status Code</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>