force-app/main/default/objects/Error_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of exception thrown, whether standard or custom.</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>