force-app/main/default/objects/Error_Log__c/listViews/Past_24_Hours.listView-meta.xml
<ListView>
    <fullName>Past_24_Hours</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Past 24 Hours</label>
</ListView>