force-app/main/default/objects/Error_Log__c/listViews/Past_Week.listView-meta.xml
<ListView>
    <fullName>Past_Week</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Past Week</label>
</ListView>